updated landing page, podcast-list, updated styles and added grid

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,10 @@
     <title>Thinkful React Starter</title>
 
     <link rel="stylesheet" href="css/index.css">
+     <link href="//cdn.muicss.com/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200|Work+Sans:200" rel="stylesheet">
+
 </head>
 
 <body>
