--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="css/index.css">
      <link href="//cdn.muicss.com/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
+     <script src="https://use.fontawesome.com/55ccb09b0e.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200|Work+Sans:200" rel="stylesheet">
 
