--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
 
      <script src="https://use.fontawesome.com/c94e81de14.js"></script>
 
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:200|Work+Sans:200" rel="stylesheet">
     <!-- <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"> -->
