--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,13 +13,10 @@
      <link href="//cdn.muicss.com/mui-0.9.16/css/mui.min.css" rel="stylesheet" type="text/css" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
      <script src="https://use.fontawesome.com/55ccb09b0e.js"></script>
-
      <!-- <script src="https://use.fontawesome.com/c94e81de14.js"></script> -->
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-
     <link href="https://fonts.googleapis.com/css?family=Raleway:200|Work+Sans:200" rel="stylesheet">
-    <!-- <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"> -->
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
 </head>
 
